Added Team C Evaluation 3 video

--- a/index.html
+++ b/index.html
@@ -930,24 +930,28 @@ input[type="range"]#rate_personality::-moz-range-thumb{
   const stage3EvalByTeam = {
       'Team A': 'https://www.youtube.com/watch?v=hXsY0U9zZuA'
       , 'Team B': 'https://www.youtube.com/watch?v=_iOy0mMzyyc'
+    , 'Team C': 'https://www.youtube.com/watch?v=X_iZ0_x_QFg'
     };
   // === Central map of per-evaluation team videos (for list view) ===
   // Keys must match the eval label produced by the menu code (e.g. "Evaluation 3")
   const TEAM_VIDEOS = {
-    'Evaluation 3': {
-            'Team A': {
-        title: 'Re:Start!!!!! - Snow Halation',
-        url: 'https://www.youtube.com/watch?v=hXsY0U9zZuA'
-      },
-      'Team B': {
-        title: '絶対アイドル辞めないで / キューティー♡パピヨン Cover',
-        url: 'https://www.youtube.com/watch?v=_iOy0mMzyyc'
-      }
-      // Add more teams later as videos arrive
+  'Evaluation 3': {
+    'Team A': {
+      title: 'Re:Start!!!!! - Snow Halation',
+      url: 'https://www.youtube.com/watch?v=hXsY0U9zZuA'
+    },
+    'Team B': {
+      title: '絶対アイドル辞めないで / キューティー♡パピヨン Cover',
+      url: 'https://www.youtube.com/watch?v=_iOy0mMzyyc'
+    },
+    'Team C': {
+      title: '最上級にかわいいの！/ 超♡にこにこ宣伝部 Cover',
+      url: 'https://www.youtube.com/watch?v=X_iZ0_x_QFg'
     }
-    // Future example:
-    // 'Evaluation 4': { 'Team X': { title:'...', url:'...' } }
-  };
+  }
+  // Future example:
+  // 'Evaluation 4': { 'Team X': { title: '...', url: '...' } }
+};
 
   const campEvalByTeam = {
       'Team A': 'https://www.youtube.com/watch?v=gSh4oCu5eyE&t=4040',
