Added Team D's Evaluation 3 Performance video

--- a/index.html
+++ b/index.html
@@ -938,7 +938,9 @@ input[type="range"]#rate_personality::-moz-range-thumb{
       'Team A': 'https://www.youtube.com/watch?v=hXsY0U9zZuA'
       , 'Team B': 'https://www.youtube.com/watch?v=_iOy0mMzyyc'
     , 'Team C': 'https://www.youtube.com/watch?v=X_iZ0_x_QFg'
-    };
+    ,
+      'Team D': 'https://www.youtube.com/watch?v=s5-RRUEX0lI'
+    }
   // === Central map of per-evaluation team videos (for list view) ===
   // Keys must match the eval label produced by the menu code (e.g. "Evaluation 3")
   const TEAM_VIDEOS = {
@@ -954,6 +956,11 @@ input[type="range"]#rate_personality::-moz-range-thumb{
     'Team C': {
       title: '最上級にかわいいの！/ 超♡にこにこ宣伝部 Cover',
       url: 'https://www.youtube.com/watch?v=X_iZ0_x_QFg'
+    }
+    ,
+    'Team D': {
+      title: '♡♡♡わんだーらんど / pink rabbit♡ Cover',
+      url: 'https://www.youtube.com/watch?v=s5-RRUEX0lI'
     }
   }
   // Future example:
