Added Team E Evaluation 3 performance

--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,8 @@ input[type="range"]#rate_personality::-moz-range-thumb{
       , 'Team B': 'https://www.youtube.com/watch?v=_iOy0mMzyyc'
     , 'Team C': 'https://www.youtube.com/watch?v=X_iZ0_x_QFg'
     ,
-      'Team D': 'https://www.youtube.com/watch?v=s5-RRUEX0lI'
+      'Team D': 'https://www.youtube.com/watch?v=s5-RRUEX0lI',
+      'Team E': 'https://www.youtube.com/watch?v=NbT_KcIa5Cw'
     }
   // === Central map of per-evaluation team videos (for list view) ===
   // Keys must match the eval label produced by the menu code (e.g. "Evaluation 3")
@@ -1058,7 +1059,12 @@ input[type="range"]#rate_personality::-moz-range-thumb{
       title: '♡♡♡わんだーらんど / pink rabbit♡ Cover',
       url: 'https://www.youtube.com/watch?v=s5-RRUEX0lI'
     }
-  }
+      ,
+    'Team E': {
+      title: '仮契約のシンデレラ / 契約済のシンデレラ Cover',
+      url: 'https://www.youtube.com/watch?v=NbT_KcIa5Cw'
+    }
+}
   // Future example:
   // 'Evaluation 4': { 'Team X': { title: '...', url: '...' } }
 };
