--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -78,7 +77,7 @@
     .headergrid { display:grid; grid-template-columns: 240px 1fr; gap:16px; align-items:center; }
     .avatar-lg { width:240px; height:240px; border-radius:50%; object-fit:cover; }
     .title { margin:0; font-size:28px; font-weight:800; } .jp { color:#c76b94; font-size:16px; font-weight:700; margin-left:6px; }
-    .team-badge { display:inline-block; background:#ffe3f0; border:1px solid #f3c2d7; border-radius:999px; padding:4px 10px; font-weight:700; margin-top:8px; }
+    .team-badge { display:inline-block; background:#ffe3f0; border:1px solid #f3c2d7; border-radius:999px; padding:4px 10px; font-weight:700; margin-top:8px; cursor:pointer; transition:background 0.2s, transform 0.15s; }
     /* Eliminated pill in detail header */
     .detail .pill-elim {
       display:inline-block; margin-left:8px; padding:4px 10px;
